# celsius

./: .gitignore  Compatibility.v  CoqMakefile  Eval.v  INSTALL.md  LocalReasoning.v  Makefile  Makefile.coq  Makefile.coq.local  PartialMonotonicity.v  README.md  Reachability.v  Scopability.v  Stackability.v  Tactics.v  Trees.v  Typing.v  Wellformedness.v  _CoqProject  celsius.opam  configure  coq-celsius.opam  strongInduction.v
.github/workflows/: basic.yml
src/: Authority.v  Compatibility.v  Eval.v  EvalP.v  Examples.v  Helpers.v  Language.v  LibTactics.v  LocalReasoning.v  MetaTheory.v  Notations.v  OverApproximation.v  PartialMonotonicity.v  Reachability.v  Scopability.v  Semantics.v  Soundness.v  Stackability.v  Tactics.v  Trees.v  Typing.v  TypingDefinitions.v  Wellformedness.v
